[package]
name = "sha_256_scratch"
version = "0.1.2"
edition = "2021"
description = "SHA-256 from-scratch implementation"
license = "GPL-3.0-or-later"
keywords = ["cryptography", "sha256", "hash"]
categories = ["cryptography"]
repository = "https://github.com/danieldidiobalsamo/sha256sum_from_scratch"